crates/cyrs-plan/tests/snapshots/corpus__corpus_json_merge_rel_with_on_create.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [
    {
      "bind": 0,
      "label": [
        "Person"
      ],
      "op": "source"
    },
    {
      "bind": 1,
      "label": [
        "Person"
      ],
      "op": "source"
    }
  ],
  "var_map": [],
  "write_ops": [
    {
      "bind": 2,
      "from": 0,
      "on_create": [
        {
          "op": "set_property",
          "prop": "since",
          "target": 2,
          "value": {
            "kind": "int",
            "value": 2024
          }
        }
      ],
      "on_match": [
        {
          "op": "set_property",
          "prop": "strength",
          "target": 2,
          "value": {
            "bin_op": "add",
            "kind": "bin_op",
            "lhs": {
              "kind": "prop",
              "prop": "strength",
              "target": {
                "id": 2,
                "kind": "var"
              }
            },
            "rhs": {
              "kind": "int",
              "value": 1
            }
          }
        }
      ],
      "op": "merge_rel",
      "props": {
        "entries": [],
        "kind": "map"
      },
      "rel_type": "FOLLOWS",
      "to": 1
    }
  ]
}
