crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_agg_count_star.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS cnt]
  Aggregate keys=[] aggs=[count($0)]
    Source (AS $0)
